# studienarbeit

./: .gitignore  .gitmodules  CMakeLists.txt  config.hpp  main.cpp
qml/: ConceptNode.qml  ConnectorEdge.qml  Content.qml  ContentEditDialog.qml  CustomCanvasNodeTemplate.qml  CustomRectNodeTemplate.qml  DraggableRect.qml  EdgeMover.qml  ExponentialSlider.qml  Graphview.qml  QuestionEdge.qml  RelationNode.qml  ResultScreen.qml  ReviewSession.qml  Switcher.qml  file_loaded_placeholder.qml  graph_or_review.qml  graphview.qml  main.qml  no_file.qml  resources.qrc  review_session.qml
sounds/: sound_resources.qrc
src/: AskedQuestion.hpp  ClassicReview.cpp  ClassicReview.hpp  ConceptNode.cpp  ConceptNode.hpp  ConnectorEdge.cpp  ConnectorEdge.hpp  Content.cpp  Content.hpp  CustomGraphView.cpp  CustomGraphView.hpp  EdgeBase.cpp  EdgeBase.hpp  FlashcardAlgorithm.hpp  KeyboardHelper.cpp  KeyboardHelper.hpp  KnowledgeGraph.cpp  KnowledgeGraph.hpp  MainWindow.cpp  MainWindow.hpp  NodeBase.cpp  NodeBase.hpp  Question.cpp  Question.hpp  QuestionEdge.cpp  QuestionEdge.hpp  RelationNode.cpp  RelationNode.hpp  ReviewModel.hpp  ReviewSession.cpp  ReviewSession.hpp  SM2.cpp  SM2.hpp  WindowManager.cpp  WindowManager.hpp  initialiseDirectory.cpp  initialiseDirectory.hpp
